Sat May 18 11:05:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (inspect_enumerator): use VALUE instead of mere char*
	  by using rb_sprintf() and rb_id2str().

	* enumerator.c (append_method): extract from inspect_enumerator().

Sat May 18 09:00:32 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb (INTEGER2VALUE): Use LONG2FIX if possible.

Sat May 18 00:38:47 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: Convert integer constants bigger than int
	  correctly.

Fri May 17 22:02:15 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ifaddr.c: Use unsigned LONG_LONG to represent flags
	  because SunOS 5.11 (OpenIndiana) defines ifa_flags as uint64_t.

Fri May 17 21:47:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* cont.c: Typo in constant MAX_MACHINE_STACK_CACHE from '..MAHINE..'
	  patch by @schmurfy [Fixes GH-307]

Fri May 17 19:18:24 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-matching-char): Do not put
	  a closing quote when the quote typed does not start a string, as
	  in $', ?\' or ?\".

Fri May 17 18:06:15 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Consider error messages to find out version option of
	  C compiler.
	  The C compiler of Sun Studio C emits "Warning: Option -qversion
	  passed to ld, if ld is invoked, ignored otherwise" and exit
	  successfully.

Fri May 17 17:34:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_guarded_ptr): unoptimize on other compilers than gcc and
	  msvc.

Fri May 17 11:06:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (TH_PUSH_TAG): ensure jmpbuf to be accessible before
	  pushing tag to get rid of unaccessible tag by stack overflow.

Thu May 16 17:15:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_eval.c (rb_catch_obj): add volatile to tag to prevent crash
	  experimentally.
	  http://www.rubyist.net/~akr/chkbuild/debian/ruby-trunk/log/20130515T133500Z.log.html.gz
