@@ -464,10 +464,14 @@ enum rb_thread_status {
 
 typedef RUBY_JMP_BUF rb_jmpbuf_t;
 
+/*
+  the members which are written in TH_PUSH_TAG() should be placed at
+  the beginning and the end, so that entire region is accessible.
+*/
 struct rb_vm_tag {
-    rb_jmpbuf_t buf;
     VALUE tag;
     VALUE retval;
+    rb_jmpbuf_t buf;
     struct rb_vm_tag *prev;
 };
 
